--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
   </div>  
 </section>
 <!-- owl-carousel.js -->
-    <script src="/vendors/js/jQuery.js"></script>
-    <script src="vendors/js/owl.carousel.min.js"></script>
+    <script src="./vendors/js/jQuery.js"></script>
+    <script src="./vendors/js/owl.carousel.min.js"></script>
 <!-- waypoint -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/waypoints.debug.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
