--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
             </div>
           </div>
           <div class="item">
-            <img src="/resources/img/ecommerce.jpg" alt="ecommerce" class="image"/>
+            <img src="./resources/img/ecommerce.jpg" alt="ecommerce" class="image"/>
             </div>
              <!-- Pj-2 -->
             <div class="item">
-              <img src="/resources/img/entertainment.jpg" alt="entertainment" class="image"/>
+              <img src="./resources/img/entertainment.jpg" alt="entertainment" class="image"/>
             </div>
             <div class="item">
              <div class="pj-2 text-center">
@@ -111,13 +111,13 @@
              <!-- Pj-3 -->
             <div class="item">
               <div class="pj-3 text-center">
-                <h4>Social Media Website <span>></span></h4>
+                <h4>Business Website <span>></span></h4>
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quis accusamus nisi quam aut sit neque officia vero molestiae sed, aperiam amet at ipsam non eos sapiente ea dignissimos nostrum!</p>
                  <button class="btn">View Project</button>
               </div>
             </div>
             <div class="item">
-              <img src="/resources/img/social media.png" alt="social media" class="image" />
+              <img src="./resources/img/business.jpg" alt="social media" class="image" />
             </div>
           </div>
         </div>
