--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
               <li>
                 <a href="#"> <i class="far fa-envelope"></i>hobbyag4@</a>   
             </li>
+            <!---- Social links -->
           </ul>
           <ul class="links">
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
