--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     />
     <!-- Query CSS -->
     <link rel="stylesheet" href="./resources/css/query.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="./resources/css/style.css" />
+        <!-- Custom CSS -->
+    <link rel="stylesheet" href="resources/css/style.css" />
     <title>My Portfoilo</title>
   </head>
 <body>
@@ -175,7 +175,7 @@
             </div>
           </div>
           <!-- Progress -->
-          <div class="col-md-6">
+          <div class="col-md-6 skill">
               <div class="col-md-12">
                 <h5 class="transitiontext">HTML</h5>
                 <div class="transition"></div>
