--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
     />
     <!-- Query CSS -->
-    <link rel="stylesheet" href="./resources/css/query.css">
+    <link rel="stylesheet" href="resources/css/query.css">
         <!-- Custom CSS -->
     <link rel="stylesheet" href="resources/css/style.css" />
     <title>My Portfoilo</title>
@@ -73,7 +73,7 @@
         </div>
 </div>
 <!-- projects section -->
-<section id="projects">
+<section id="projects" class="projects">
   <div class="container">
     <div class="row-pj text-center ">
       <h2>My Projects</h2>
@@ -124,7 +124,7 @@
     </div>
 </section>
 <!-- About section -->
-<section id="about">
+<section id="about" class="about">
   <div class="container">
     <div class="row-about text-center">
         <h2>About</h2>
